--- a/src/components/ContactCTA.astro
+++ b/src/components/ContactCTA.astro
@@ -5,7 +5,7 @@ import Icon from './Icon.astro';
 
 <aside>
 	<h2>Interested in working together?</h2>
-	<CallToAction href="mailto:leandromqrs@hotmail.com">
+	<CallToAction href="mailto:leandromqrs@hotmail.com?subject=Let's catch up for a cool opportunity!">
 		Send Me a Message
 		<Icon icon="paper-plane-tilt" size="1.2em" />
 	</CallToAction>
