--- a/src/pages/[lang]/book-a-call.astro
+++ b/src/pages/[lang]/book-a-call.astro
@@ -1,8 +1,7 @@
 ---
-import BaseLayout from '../layouts/BaseLayout.astro';
-import Hero from '../components/Hero.astro';
-import ScheduleForm from '../components/ScheduleForm.astro';
-import ContactCTA from '../components/ContactCTA.astro';
+import BaseLayout from '../../layouts/BaseLayout.astro';
+import Hero from '../../components/Hero.astro';
+import ContactCTA from '../../components/ContactCTA.astro';
 
 ---
 
