--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,6 +2,7 @@
 import MainHead from '../components/MainHead.astro';
 import Nav from '../components/Nav.astro';
 import Footer from '../components/Footer.astro';
+import { getLocale } from '../paraglide/runtime';
 
 interface Props {
 	title?: string | undefined;
@@ -11,7 +12,7 @@ interface Props {
 const { title, description } = Astro.props;
 ---
 
-<html lang="en">
+<html lang={getLocale()}>
 	<head>
 		<MainHead title={title} description={description} />
 	</head>
