--- a/src/pages/[lang]/blog.astro
+++ b/src/pages/[lang]/blog.astro
@@ -1,10 +1,10 @@
 ---
 import { getCollection } from 'astro:content';
 
-import BaseLayout from '../layouts/BaseLayout.astro';
+import BaseLayout from '../../layouts/BaseLayout.astro';
 
-import BlogPreview from '../components/BlogPreview.astro';
-import Grid from '../components/Grid.astro';
+import BlogPreview from '../../components/BlogPreview.astro';
+import Grid from '../../components/Grid.astro';
 
 const posts = (await getCollection('blog')).sort(
 	(a, b) => b.data.publishDate.valueOf() - a.data.publishDate.valueOf(),
