--- a/src/pages/[lang]/blog.astro
+++ b/src/pages/[lang]/blog.astro
@@ -6,6 +6,14 @@ import BaseLayout from '../../layouts/BaseLayout.astro';
 import BlogPreview from '../../components/BlogPreview.astro';
 import Grid from '../../components/Grid.astro';
 
+// For dynamic routing
+export function getStaticPaths() {
+  return [
+    { params: { lang: 'en' } },
+    { params: { lang: 'pt-br' } }
+  ];
+}
+
 const posts = (await getCollection('blog')).sort(
 	(a, b) => b.data.publishDate.valueOf() - a.data.publishDate.valueOf(),
 );
