--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -18,6 +18,14 @@ import TechIcon from '../../components/TechIcon.astro';
 import ContactCTA from '../../components/ContactCTA.astro';
 import Skills from '../../components/Skills.astro';
 
+// For dynamic routing
+export function getStaticPaths() {
+  return [
+    { params: { lang: 'en' } },
+    { params: { lang: 'pt-br' } }
+  ];
+}
+
 // Content Fetching: List four most recent work projects
 const projects = (await getCollection('work'))
 	.sort((a, b) => b.data.publishDate.valueOf() - a.data.publishDate.valueOf())
